src/rootinfo_filter.cpp
@@ -8,13 +8,12 @@
 */
 #include "rootinfo_filter.h"
 #include "netinfo.h"
-#include "virtualdesktops.h"
 
 namespace KWin
 {
 
 RootInfoFilter::RootInfoFilter(RootInfo *parent)
-    : X11EventFilter(QList<int>{XCB_PROPERTY_NOTIFY, XCB_CLIENT_MESSAGE})
+    : X11EventFilter(QList<int>{XCB_CLIENT_MESSAGE})
     , m_rootInfo(parent)
 {
 }
@@ -24,12 +23,6 @@ bool RootInfoFilter::event(xcb_generic_event_t *event)
     NET::Properties dirtyProtocols;
     NET::Properties2 dirtyProtocols2;
     m_rootInfo->event(event, &dirtyProtocols, &dirtyProtocols2);
-    if (dirtyProtocols & NET::DesktopNames) {
-        VirtualDesktopManager::self()->save();
-    }
-    if (dirtyProtocols2 & NET::WM2DesktopLayout) {
-        VirtualDesktopManager::self()->updateLayout();
-    }
     return false;
 }
 
